--- a/src/Pages/Todo/Todo.module.scss
+++ b/src/Pages/Todo/Todo.module.scss
@@ -1,5 +1,14 @@
-.Task {
+
+.container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
+  justify-content: center;
+  align-items: center;
+
+  .toDo {
+      display: flex;
+      justify-content: flex-start;
+
+  }
 }
