добовил checkbox, поправил верстку

--- a/src/Pages/Todo/Todo.module.scss
+++ b/src/Pages/Todo/Todo.module.scss
@@ -6,9 +6,8 @@
   justify-content: center;
   align-items: center;
 
-  .toDo {
-      display: flex;
-      justify-content: flex-start;
-
+  .Accordion {
+    display: flex;
+    justify-content: flex-start;
   }
 }
