--- a/src/Pages/Todo/Todo.module.scss
+++ b/src/Pages/Todo/Todo.module.scss
@@ -1,13 +1,18 @@
-
 .container {
   display: flex;
   flex-direction: column;
   margin-bottom: 8px;
   justify-content: center;
   align-items: center;
+  height: 330%;
 
   .Accordion {
     display: flex;
     justify-content: flex-start;
   }
+}
+.side-bar {
+  width: 100%; /* Установите ширину на 100% */
+  height: 1300vh; /* Установите высоту на 100% вьюпорта (viewport height) */
+  background-color: #f0f0f0; /* Цвет фона боковой панели */
 }
