Добавил логику в sidebar и поправил немного верстку

--- a/src/Pages/Todo/Todo.module.scss
+++ b/src/Pages/Todo/Todo.module.scss
@@ -12,7 +12,7 @@
   }
 }
 .side-bar {
-  width: 100%; /* Установите ширину на 100% */
-  height: 1300vh; /* Установите высоту на 100% вьюпорта (viewport height) */
-  background-color: #f0f0f0; /* Цвет фона боковой панели */
+  width: 100%;
+  height: 1300vh;
+  background-color: #f0f0f0;
 }
