--- a/src/component/Task/Task.module.scss
+++ b/src/component/Task/Task.module.scss
@@ -6,14 +6,14 @@
 
   .checkBox {
     position: absolute;
-    left: 65%;
+    left: 64%;
 
   }
   .checkBox:hover {
 
   }
 
-  .swither {
+  .switcher {
     padding: 0;
     border: none;
     background: none;
@@ -21,7 +21,7 @@
 
   }
 
-  .title {
+  .Segment {
     height: 18px;
     padding: 0;
   }
