--- a/src/component/sidebar/SideBare.module.scss
+++ b/src/component/sidebar/SideBare.module.scss
@@ -4,8 +4,17 @@
   padding: 0;
   cursor: pointer;
   position: relative;
-  right: 150px ;
+  right: 150px;
   font-size: 19px;
+}
+
+.trash {
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+  position: relative;
+  top: 750px
 }
 
 .Segment {
@@ -14,7 +23,7 @@
   padding-bottom: 10px !important;
 
   .checkBox {
-   margin-right: 6px
+    margin-right: 6px
   }
 
   .input {
