--- a/src/component/InputAddTask/inputAddTask.module.scss
+++ b/src/component/InputAddTask/inputAddTask.module.scss
@@ -4,9 +4,9 @@
 }
 
 .addTask {
-  position: fixed;
-  right: 650px;
-  bottom: 928px ;
+  position: relative;
+  right: 40px;
+  width: 0px;
   padding: 0;
   border: none;
   background: none;
