добавил фичу с сохранениев в localStore и рефакторинг

--- a/src/component/sidebar/SideBare.module.scss
+++ b/src/component/sidebar/SideBare.module.scss
@@ -14,7 +14,7 @@
   padding: 0;
   cursor: pointer;
   position: relative;
-  top: 710px;
+  top: 80px;
 }
 
 .Segment {
@@ -35,7 +35,10 @@
   }
 }
 
-
+.toDo {
+  height: 100vh;
+  width: 100vh;
+}
 .desc {
 
 }
